# stark101-rs

./: Cargo.toml  README.md
src/: field.rs  lib.rs  main.rs
src/part_1/: fib_square.rs  mod.rs  thinking_polynomial.rs
src/solutions/: mod.rs
src/solutions/part_1/: fib_square.rs  mod.rs  thinking_polynomial.rs
